--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "db:migrate": "sequelize-cli db:migrate"
+    "db:migrate": "sequelize-cli db:migrate",
+    "postinstall": "chmod +x ./node_modules/.bin/sequelize-cli"
   },
   "keywords": [],
   "author": "",
