--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "db:migrate": "sequelize-cli db:migrate",
-    "postinstall": "chmod +x ./node_modules/.bin/sequelize-cli"
+    "start": "npm run db:migrate && node index.js",
+    "db:migrate": "sequelize-cli db:migrate"
   },
   "keywords": [],
   "author": "",
